--- a/library_app/library_app.csproj
+++ b/library_app/library_app.csproj
@@ -54,17 +54,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="DateAskform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DateAskform.Designer.cs">
+      <DependentUpon>DateAskform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LibraryApp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LibraryApp.Designer.cs">
+      <DependentUpon>LibraryApp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="DateAskform.resx">
+      <DependentUpon>DateAskform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LibraryApp.resx">
+      <DependentUpon>LibraryApp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
